--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Chorey</string>
-    <!-- Strings related to login -->
+    <!-- Login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
@@ -9,7 +9,11 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
-    <!--                                       -->
+    <!-- Home Selection Screen -->
     <string name="return_text">Return</string>
+    <!-- Home Recycler View -->
     <string name="home_item_place_holder">Home</string>
+    <string name="home_item_score">Points: 0</string>
+    <string name="home_item_members">Members: 0</string>
+
 </resources>
