--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,8 +17,9 @@
     <string name="home_item_score">Points: 0</string>
     <string name="home_item_members">Members: 0</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="home_name_placeholder">Home_Name</string>
     <string name="addHomeButton">Add</string>
     <string name="removeHomeButton">Remove</string>
+    <string name="menuTitleDefault">Your Homes:</string>
 
 </resources>
