Chore recycler: row xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,12 @@
     <string name="remove_home_button">Remove</string>
     <string name="menu_title_default">Your Homes:</string>
     <string name="home_coming_up">TODOs</string>
+    <!-- Chore Recycler View -->
+    <string name="chore_item_name">Chore</string>
+    <string name="chore_item_assignee_text">Assigned:</string>
+    <string name="chore_item_assignee">User</string>
+    <string name="chore_item_due_text">Due:</string>
+    <string name="chore_item_due">Time</string>
+    <string name="chore_item_completed">Done</string>
 
 </resources>
