--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,8 +18,8 @@
     <string name="home_item_score">Points: 0</string>
     <string name="home_item_members">Members: 0</string>
     <string name="home_name_placeholder">Home_Name</string>
-    <string name="add_home_button">Add</string>
-    <string name="remove_home_button">Remove</string>
+    <string name="add_home_button">Add Home</string>
+    <string name="remove_home_button">Remove Home</string>
     <string name="menu_title_default">Your Homes:</string>
     <string name="menu_title_remove">Click to Remove</string>
     <string name="home_coming_up">TODOs</string>
@@ -33,5 +33,9 @@
     <!-- Add Home Dialog -->
     <string name="create_new_home_button">Create new!</string>
     <string name="join_existing_home_button">Join existing!</string>
+    <!-- Remove Home Confirmation Dialog -->
+    <string name="confirm_remove_title">Are you sure?</string>
+    <string name="confirm_remove_yes">Remove</string>
+    <string name="confirm_remove_no">Cancel</string>
 
 </resources>
