--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <!-- Top level -->
     <string name="app_name">Chorey</string>
+
     <!-- Login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
@@ -10,27 +11,31 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
-    <!-- Home Selection Screen -->
-    <string name="return_text">Return</string>
-    <string name="empty_home">Create new Home!</string>
-    <!-- Home Recycler View -->
-    <string name="home_item_place_holder">Home</string>
-    <string name="home_item_score">Points: 0</string>
-    <string name="home_item_members">Members: 0</string>
-    <string name="home_name_placeholder">Home_Name</string>
+
+    <!-- Menu Fragment -->
     <string name="add_home_button">Add Home</string>
     <string name="remove_home_button">Remove Home</string>
     <string name="menu_title_default">Your Homes:</string>
     <string name="menu_title_remove">Click to Remove</string>
-    <string name="home_coming_up">TODOs</string>
-    <!-- Chore Recycler View -->
-    <string name="chore_item_name">Chore</string>
-    <string name="chore_item_assignee_text">Assigned:</string>
-    <string name="chore_item_assignee">User</string>
-    <string name="chore_item_due_text">Due:</string>
-    <string name="chore_item_due">Time</string>
-    <string name="chore_item_completed">Done</string>
+        <!-- Menu Recycler View -->
+        <string name="home_item_place_holder">Home</string>
+        <string name="home_item_score">Points: 0</string>
+        <string name="home_item_members">Members: 0</string>
+
+    <!-- Home Fragment -->
+    <string name="home_name_placeholder">Home_Name</string>
+    <string name="home_all_chores_text">TODOs</string>
     <string name="add_chore_button">Add Chore</string>
+    <string name="add_members_button">Invite</string>
+    <string name="home_summary_button">Summary</string>
+        <!-- Chore Recycler View -->
+        <string name="chore_item_name">Chore</string>
+        <string name="chore_item_assignee_text">Assigned:</string>
+        <string name="chore_item_assignee">User</string>
+        <string name="chore_item_due_text">Due:</string>
+        <string name="chore_item_due">Time</string>
+        <string name="chore_item_completed">Done</string>
+
     <!-- Add Home Dialog -->
     <string name="create_new_home_button">Create new!</string>
     <string name="join_existing_home_button">Join existing!</string>
@@ -43,8 +48,6 @@
     <string name="confirm_remove_title">Are you sure?</string>
     <string name="confirm_remove_yes">Remove</string>
     <string name="confirm_remove_no">Cancel</string>
-
-
 
     <!-- Debugging -->
     <string-array name="home_names">
