--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="remove_home_button">Remove Home</string>
     <string name="menu_title_default">Your Homes:</string>
     <string name="menu_title_remove">Click to Remove</string>
+    <string name="menu_title_welcome">Welcome to Chorey!</string>
     <string name="auth_button_login">Login</string>
     <string name="auth_button_logout">Logout</string>
         <!-- Menu Recycler View -->
