--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,8 +24,9 @@
     <string name="auth_button_logout">Logout</string>
         <!-- Menu Recycler View -->
         <string name="home_item_place_holder">Home</string>
-        <string name="home_item_score">Points: 0</string>
-        <string name="home_item_members">Members: 0</string>
+        <string name="home_item_score">Points:</string>
+        <string name="home_item_members">Members:</string>
+        <string name="home_item_zero">0</string>
 
     <!-- Home Fragment -->
     <string name="home_all_chores_text">TODOs</string>
@@ -52,7 +53,6 @@
     <string name="create_home_no">Cancel</string>
     <string name="create_home_hint">Enter Home name:</string>
     <!-- Remove Home Confirmation Dialog -->
-    <string name="confirm_remove_title">Are you sure?</string>
     <string name="confirm_remove_yes">Remove</string>
     <string name="confirm_remove_no">Cancel</string>
     <!-- Join Home dialog -->
