--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,10 @@
         <string name="chore_item_due_text">Due:</string>
         <string name="chore_item_due">Time</string>
         <string name="chore_item_completed">Done</string>
+        <!-- Bottom navigation -->
+        <string name="home_icon_desc">Home</string>
+        <string name="notice_board_icon_desc">Board</string>
+        <string name="summary_icon_desc">Summary</string>
 
     <!-- Add Home Dialog -->
     <string name="create_home_button">Create new!</string>
