Chore editing works

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,10 +77,12 @@
     <string name="chore_detail_name_text">Name:</string>
     <string name="chore_detail_spinner_text">Template:</string>
     <string name="create_chore_edit_button">Edit</string>
+    <string name="create_chore_update_button">Update</string>
     <string name="chore_detail_assign_text">Assign to:</string>
     <string name="chore_detail_assign_hint">Select members</string>
     <string name="chore_detail_due_text">Repeats:</string>
     <string name="chore_detail_due_hint">Select interval</string>
+
     <!-- Debugging -->
     <string-array name="home_names">
         <item>@string/home_name_placeholder</item>
