--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,6 +82,8 @@
     <string name="chore_detail_assign_text">Assign to:</string>
     <string name="chore_detail_assign_hint">Select members</string>
     <string name="chore_detail_due_text">Due:</string>
+    <string name="chore_detail_repeats">Yes</string>
+    <string name="chore_detail_timed_text">Fixed schedule?</string>
     <string name="chore_detail_due_untimed">As needed</string>
     <string name="chore_detail_due_date_hint">Select Date</string>
     <string name="chore_detail_due_time_hint">Select Time</string>
