--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,8 @@
     <string name="home_to_menu_button">Home</string>
     <string name="home_no_chores_left">No Chores left to do!</string>
     <string name="home_loading">Loading…</string>
+    <string name="home_summary_title">Summary</string>
+    <string name="home_notes_title">Notice Board</string>
         <!-- Chore Recycler View -->
         <string name="chore_item_name">Chore</string>
         <string name="chore_item_assignee_text">Assigned:</string>
