--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,7 +59,7 @@
     <!-- Add Home Dialog -->
     <string name="create_home_button">Create!</string>
     <string name="join_existing_home_button">Join!</string>
-    <string name="add_home_dialog_title">Create a new home or join existing?</string>
+    <string name="add_home_dialog_title">Create New or Join Existing?</string>
     <!-- Create Home Dialog -->
     <string name="create_home_title">Create New Home!</string>
     <string name="create_home_yes">Create</string>
